@startuml Systems_Architecture
!theme plain

abstract class ISystem {
    +Update(World&, float): void = 0
}

package "Input Systems" {
    class PlayerInputSystem {
        -m_PlayerSpeed: float
        -m_GameContext: GameContext
        +Update(World&, float): void
        -handleKeyPress(): void
    }
    note bottom of PlayerInputSystem
    Lee input del teclado
    Actualiza velocidad del Player
    end note
}

package "Physics Systems" {
    class MovementSystem {
        +Update(World&, float): void
        -updatePosition(): void
        -clampToScreen(): void
    }
    note bottom of MovementSystem
    pos += vel * deltaTime
    O(n) donde n = entidades con Transform
    end note
    
    class CollisionSystem {
        -m_GameContext: GameContext
        +Update(World&, float): void
        -checkAABB(): bool
    }
    note bottom of CollisionSystem
    Detecta colisiones AABB
    Genera eventos de colisión
    end note
    
    class CollisionResponseSystem {
        -m_PushStrength: float
        -m_GameContext: GameContext
        +Update(World&, float): void
        -resolvePush(): void
    }
    note bottom of CollisionResponseSystem
    Resuelve overlaps
    Separa cuerpos
    end note
}

package "Game Logic Systems" {
    class EnemyAISystem {
        +Update(World&, float): void
        -updateAI(): void
    }
    note bottom of EnemyAISystem
    Persigue al jugador
    Usa Lerp para suavidad
    end note
    
    class DamageSystem {
        -m_GameOverFlag: bool*
        +Update(World&, float): void
        -applyDamage(): void
    }
    note bottom of DamageSystem
    Procesa eventos de colisión
    Reduce salud
    Determina game over
    end note
    
    class LifetimeSystem {
        +Update(World&, float): void
        -decrementLifetime(): void
    }
    note bottom of LifetimeSystem
    Decrementa timers
    Destruye entidades expiradas
    end note
    
    class WaveManagerSystem {
        +Update(World&, float): void
        +Render(): void
    }
    note bottom of WaveManagerSystem
    Orquesta WaveSystem, SpawnSystem
    Controla progresión de oleadas
    end note
}

package "Spawn Systems" {
    class SpawnSystem {
        +Update(World&, float): void
        -createEntity(): void
    }
    note bottom of SpawnSystem
    Crea enemigos y obstáculos
    end note
}

package "Render Systems" {
    class RenderSystem {
        -m_GameContext: GameContext
        +Update(World&, float): void
        -renderEntity(): void
    }
    note bottom of RenderSystem
    Itera entidades con Sprite+Transform
    Llama SDL_RenderCopy
    end note
    
    class HUDSystem {
        -m_GameContext: GameContext
        +Update(World&, float): void
        -renderText(): void
    }
    note bottom of HUDSystem
    Muestra vida, oleada, tiempo
    end note
    
    class MusicSystem {
        +LoadMusic(string): bool
        +Play(): void
        +Stop(): void
    }
    note bottom of MusicSystem
    Gestiona reproducción de música
    Desacoplado del Game loop
    end note
}

ISystem <|-- PlayerInputSystem
ISystem <|-- MovementSystem
ISystem <|-- CollisionSystem
ISystem <|-- CollisionResponseSystem
ISystem <|-- EnemyAISystem
ISystem <|-- DamageSystem
ISystem <|-- LifetimeSystem
ISystem <|-- WaveManagerSystem
ISystem <|-- SpawnSystem
ISystem <|-- RenderSystem
ISystem <|-- HUDSystem

note bottom
    Orden de ejecución cada frame:
    1. PlayerInputSystem
    2. MovementSystem
    3. EnemyAISystem
    4. WaveManagerSystem + SpawnSystem
    5. LifetimeSystem
    6. CollisionSystem
    7. CollisionResponseSystem
    8. DamageSystem
    9. RenderSystem + HUDSystem
end note
    ISystem <|.. EnemyAISystem
    ISystem <|.. RenderSystem
    ISystem <|.. HUDSystem
    ISystem <|.. LifetimeSystem
    ISystem <|.. SpawnSystem
    ISystem <|.. WaveSystem
    ISystem <|.. WaveManagerSystem
}

@enduml
